--- a/products/templates/products/update.html
+++ b/products/templates/products/update.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>update</h1>
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+<form action="{% url 'products:update' product.pk %}" method='POST'>
+  {% csrf_token %}
+  {{form.as_p}}
+  <input type="submit">
+</form>
+{% endblock content %}  
