--- a/static/css/products_detail.css
+++ b/static/css/products_detail.css
@@ -1,25 +1,44 @@
+.main--padding{
+padding-left: 80px;
+padding-right: 80px;
+}
+
 .category--style {
   color : var(--secondary-color);
 }
 
+/* 제목 */
 .title--font {
 font-size : 30px;
 font-weight: bold;
 }
 
 .title--style {
-margin-bottom: 16px;
+  margin-bottom: 16px;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-.main--padding{
-padding-left: 80px;
-padding-right: 80px;
+.title--box {
+  width: 90%;
 }
+
 
 .title--likescount {
-margin-right: 6px;
+margin: 6px;
+font-size: 28px;
 color: var(--main-color)
 }
+
+
+.btn--size {
+  height: 58px;
+  width: 100%;
+  min-width: 100px;
+}
+
 .content--style {
 margin-bottom: 20px;
 margin-top: 15px;
@@ -27,42 +46,77 @@ font-size: 20px;
 padding-left: 50px;
 }
 
-.review--color {
-color: var(--main-color);
-font-weight: bold;
+.tag--stlye {
+  /* background-color: var(--main-color); */
+  border: solid 2px var(--secondary-color);
+  margin-right: 15px;
+  text-align: center;
+  padding: 0px 8px;
 }
 
-.btn--size {
-height: 58px;
-width: 100%;
-min-width: 100px;
-}
-
-.review--image__padding {
-width: 100%;
+.tag--Hash{
+  color: var(--secondary-color);
 }
 
 @media (max-width: 1100px) {
-.review--image__padding {
-  padding-left: 8px;
+  .comment--image__padding {
+    padding-left: 8px;
+  }
+  
+}
+@media (max-width: 768px) {
+  .content--image {
+    width: 100%;
+  }
+  .hidden{
+    display: none;
+  }
+  .main--padding{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .title--style {
+    margin-bottom: 16px;
+    width: 95%;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
-}
-@media (max-width: 700px) {
-.content--image {
- width: 100%;
-}
+/* 댓글 */
+.comment--user--profile {
+  margin-right: 3px;
+  border-radius: 70%;
+  width: 30px;
 }
 
-.review--user {
-font-weight: bold
+.comment--user {
+  font-weight: bold
+}
+
+.comment--color {
+  color: var(--main-color);
+  font-weight: bold;
+}
+
+.comment--updated_at{
+  font-size: 12px;
+  color: var(--subtle-color)
+}
+
+.comment--image__padding {
+  width: 100%;
 }
 
 .edit--model--botton {
-height: 42;
+  height: 42px;
 }
 
-.review--updated_at{
-font-size: 12px;
-color: var(--subtle-color)
+.product--border {
+  height: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
