--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
     <!-- bootstrap_icon css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/button.css' %}">
+    <link rel="stylesheet" href="{% static 'css/hover.css' %}">
     {% block link %}
     {% endblock link %}
     <style>
@@ -30,14 +32,15 @@
         </div>
       </div> 
     </main>
-    
+
+
+
     <footer class="footer_container">
       {% include 'footer.html' %}
     </footer>
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script>
-      
+    <script>  
     </script>
     {% block script %}
     {% endblock script %}
