--- a/templates/nav.html
+++ b/templates/nav.html
@@ -11,10 +11,10 @@
       <a href="{% url 'products:index' %}" class="btn nav--button nav--btn">제품</a>
       <a href="{% url 'recipes:index' %}" class="btn nav--button nav--btn">레시피</a>
       <form class="search_hidden">
-        <div>
-          <span class="nave__search__icon"><i class="bi bi-search"></i></span>
-          <input type="search" placeholder="Search" name = "">
-          {% comment %} <button type='submit'>검색</button> {% endcomment %}
+        <div class='d-flex'>
+          {% comment %} <span class="nave__search__icon"><i class="bi bi-search"></i></span> {% endcomment %}
+          <button type='submit'class='button--reversecolor--clear btn-hover__reverseblue rounded'><i class="bi bi-search"></i></button>
+          <input type="search" placeholder="원하는 상품을 검색해보세요" class= 'form-control' name = "">
         </div>
       </form>
     </div>
