--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -27,7 +27,7 @@
           </div>
           <div class='card--tag--border'>
             <p><i class="bi bi-star-fill card--rating__color"></i>{{product.hits}}</p>
-            <p>리뷰 {{product.review_set.count}}</p>
+            <p>리뷰 {{product.comment_set.count}}</p>
           </div>
           <div>
             <p>tag</p>
@@ -71,7 +71,7 @@
           </div>
           <div class='card--tag--border'>
             <p><i class="bi bi-star-fill card--rating__color"></i>{{product.hits}}</p>
-            <p>리뷰 {{product.review_set.count}}</p>
+            <p>리뷰 {{product.comment_set.count}}</p>
           </div>
           <div>
             <p>tag</p>
@@ -93,7 +93,7 @@
             </div>
             <div class='card--tag--border'>
               <p><i class="bi bi-star-fill card--rating__color"></i>{{product.hits}}</p>
-              <p>리뷰 {{product.review_set.count}}</p>
+              <p>리뷰 {{product.comment_set.count}}</p>
             </div>
             <div>
               <p>tag</p>
