수정-recipes/models.py

--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -191,20 +191,20 @@
     <script src="{% static 'js/product_detail_comment_like.js' %}"></script>
     <script>
 
-    const starInputs = document.querySelectorAll('.star-input input');
-    const starLabels = document.querySelectorAll('.star-input label');
+    //const starInputs = document.querySelectorAll('.star-input input');
+    //const starLabels = document.querySelectorAll('.star-input label');
   
-    for (let i = 0; i < starInputs.length; i++) {
-      starInputs[i].addEventListener('click', function () {
-        for (let j = 0; j <= i; j++) {
-          starLabels[j].classList.add('checked');
-        }
+    //for (let i = 0; i < starInputs.length; i++) {
+      //starInputs[i].addEventListener('click', function () {
+      //  for (let j = 0; j <= i; j++) {
+      //    starLabels[j].classList.add('checked');
+      //  }
   
-        for (let j = i + 1; j <scrip starInputs.length; j++) {
-          starLabels[j].classList.remove('checked');
-        }
-      });
-    } 
+      //  for (let j = i + 1; j <scrip starInputs.length; j++) {
+      //    starLabels[j].classList.remove('checked');
+      //  }
+    //  });
+  //  } 
   </script> 
   {% endblock script %}
 
